# oncodrive3d

./: .gitignore  CITATION.cff  Dockerfile  README.md  clustering_3d.yml  main.nf  nextflow.config  oncodrive3d.nf  pyproject.toml  requirements.txt  setup.py
datasets/: af_uniprot_to_gene_id.json
docs/: annotations_plotting.md  build_output.md  input_output.md  mutability.md  run_input_output.md
env/: clust_3d_20230331.yml  clust_3d_20230608.yml  clust_3d_20230731.yml
nf_conf/: base.config  test.config
oncodrive3d_pipeline/: README.md  nextflow.config  validation.nf
oncodrive3d_pipeline/conf/: base.config  test.config
oncodrive3d_pipeline/modules/: o3d_chimerax_plot.nf  o3d_plot.nf  o3d_run.nf
oncodrive3d_pipeline/workflows/: oncodrive3d.nf
preprocessing/test/: test.ipynb
scripts/: __init__.py  clustering_3d.py  clustering_3d_COPY_FROM_OTHER_DIR.py  clustering_3d_OLD.py  clustering_3d_v2.py  globals.py  main.py  qmap_init.py
scripts/datasets/: af_merge.py  build_annotations.py  build_datasets.py  custom_pdb.py  get_pae.py  get_pae.sh  get_structures.py  get_structures.sh  model_confidence.py  parse_pae.py  prob_contact_maps.py  seq_for_mut_prob.py  utils.py
scripts/generate_plots/: build_annotations.py  plot.py
scripts/plotting/: build_annotations.py  chimerax_plot.py  pdb_tool.py  pfam.py  plot.py  (+3 more)
tools/: config.yaml
tools/preprocessing/: README.md  config.yaml  get_regions_file.py  parse_alphafold_predictions.py  parser_alphafold_predictions.py  prepare_samplesheet.py  pyproject.toml  sitecustomize.py  update_samplesheet_and_structures.py
(+33 files in other folders)
