[project]
name = "o3d-structures-maintenance"
version = "0.1.0"
description = "Utilities for maintaining MANE samplesheets and AlphaFold predictions for Oncodrive3D"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "biopython",
    "pyyaml",
    "click",
    "daiquiri",
    "numpy",
    "requests",
    "aiohttp",
    "pypdl"
]
