[project]
name = "o3d-structures-maintenance"
version = "0.1.0"
description = "Utilities for maintaining MANE samplesheets and AlphaFold predictions for Oncodrive3D"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "biopython",
    "pyyaml",
    "click",
    "daiquiri>=3.3.0",
    "numpy==1.26.4",
    "requests",
    "aiohttp>=3.11.10",
    "pypdl==1.4.5"
]
